--- a/smartbrain/src/index.css
+++ b/smartbrain/src/index.css
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
 }
 
 button {
   cursor: pointer;
+  font-family: inherit;
 }
 
 button:hover {
