--- a/smartbrain/src/App.css
+++ b/smartbrain/src/App.css
@@ -44,10 +44,17 @@
 }
 
 .particles {
-  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: -1;
+  z-index: -3;
+}
+
+#tsparticles {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -3;
 }
