--- a/smartbrain/src/components/FaceRecognition/FaceRecognition.css
+++ b/smartbrain/src/components/FaceRecognition/FaceRecognition.css
@@ -1,9 +1,10 @@
 .bounding-box {
   position: absolute;
-  box-shadow: 0 0 0 3px #149df2 inset;
+  box-shadow: 0 0 0 3px red inset;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   cursor: pointer;
   z-index: 999;
+  border-radius: 2%;
 }
