--- a/smartbrain/src/index.css
+++ b/smartbrain/src/index.css
@@ -4,12 +4,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
+  background: linear-gradient(89deg, #ff3d1e 0%, #ffdc20 100%);
 }
 
 button {
   cursor: pointer;
   font-family: inherit;
+  border: none;
 }
 
 button:hover {
