Tweaking rank system

--- a/smartbrain/src/App.css
+++ b/smartbrain/src/App.css
@@ -44,6 +44,7 @@
 }
 
 .particles {
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
@@ -52,6 +53,7 @@
 }
 
 #tsparticles {
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
