--- a/smartbrain/src/index.css
+++ b/smartbrain/src/index.css
@@ -4,16 +4,25 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  background: linear-gradient(89deg, #ff3d1e 0%, #ffdc20 100%);
+  background: linear-gradient(89deg, #ffdc20 0%, #ff3d1e 100%);
 }
 
 button {
   cursor: pointer;
   font-family: inherit;
   border: none;
+  color: #fff;
 }
 
 button:hover {
   transform: scale(0.98);
   transition: all 0.2s ease;
+}
+
+input[type="submit" i] {
+  color: #fff;
+}
+
+input {
+  border-color: #fff;
 }
